# CronosCelerityBlock

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  __cmake.bat  cmake_install.cmake  configure.sh  create.sh  create_debug.sh  job_script.slurm  job_script2.slurm  playground  proj
.github/workflows/: celerity_ci.yml  celerity_ci_branch.yml
Testing/Temporary/: CTestCostData.txt
Visualisation/CronosPy/: CronosFileHandler.py  CronosWidget.ui  CronosWidgetDesign  CronosWidgetDesign.py  CronosWidgeteer.py  PlotDataStorage.py  RunWidget.py
Visualisation/idl/: CronosPlot.pro  attribute_avail.pro  bluetobrown02.sav  bluetobrownWithLine.sav  colortabs.pro  colsternmod.sav  cronos_commons.h  densitycoltab5.sav  fields_set_base.pro  fields_set_vec.pro  fromredtogreen.sav  fromredtogreenThreeLines.sav  temp5coltab.sav  testtableBunt.sav  testtableBunt2.sav  undefine.pro  value.pro  value_exists.pro  whiteblack.sav  whiteblackalt.sav
build_block/: CMakeCache.txt  Makefile  cmake_install.cmake  proj
cmake/: FindCronosNumLib.cmake
cronos/DataReader/: Converter.H  H5Convert.C  Makefile  XdmfGen.C  batch_XdmfGen.sh  xdmf_body.partxmf
cronos/Geom/: sources.C
cronos/InterfaceFunctions/: pde_Transport.H  problem.C  problem.H  solver.C  solver.H  user_pde.C
cronos/Limiter/: Superbee.H  limiter.H  minmod.H  vanLeer.H
cronos/RiemannSolvers/: Dissipation.H  PhysFluxes.H  RiemannSolver.C  RiemannSolver.H  cfl.C  changes.C  fieldLists.C  fieldLists.H  fields_local.C  fields_local.H  reconst.C  reconst.H  reconst_2nd.C  reconst_2nd.H  reconst_WENO.C  reconst_WENO.H  reconst_const.C  reconst_const.H  save_data.C  save_data.H  singlestep_CTSecond.C  singlestep_block.C  singlestep_general.C  singlestep_multifluid.C  transformations.C  transformations.H
cronos/StandardTests/: BrioWuCronosHll.cat  RadialAdvection.cat  RadialAdvectionCart.cat  SedovCartesian2D.cat  SodCronosHll.cat
cronos/UnitTests/: evaluate_runs.py  run_tests.py
cronos/User/: Makefile  constants.H  machinefile.local  mod_BrioWu.H  mod_HydroDisc.H  mod_MHDBlast2D.H  mod_MHDBlast3D.H  mod_MHDBlast3DPolar.H  mod_MHDBlastPolar.H  mod_MRICylDisc.H  mod_RotorProblem2D.H  mod_SOD.H  mod_Sedov3D.H  mod_TestNonlinGrid.H  mod_axistestHydro.H  mod_axistestMHD.H  mod_axistestVecPot.H  mod_linHydroWaves.H  modules.C  mpichrun.sh  multifluid_setup.C  setup_multifluid.H  setup_singlefluid.H  solver.C  solver.H
cronos/Util/: CAKWind.C  CAKWind.H  CoolingFunction.C  CoolingFunction.H  CoolingSolver.C  CoolingSolver.H  Gravity.C  Gravity.H  KeplerOrbit.C  KeplerOrbit.H  Orbit.H  ReferenceSolution.C  ReferenceSolution.H  cooling_curve_DalgarnoMcCray1972.txt  cooling_curve_SchureEtAl2009.txt
cronos/cronos_block/: CMakeLists.txt
cronos/generic/: CException.C  CException.H  Hdf5File.C  Hdf5File.H  Hdf5File_cbase.C  Hdf5File_cbase.H  buildinfo.C  cronos_config.H  cronos_config_multifluid.H  cronos_switches.H  data.C  data.H  eos.C  fluid.C  fluid.H  grid.C  grid.H  gridParam.H  gridfunc.C  gridfunc.H  gridgen.C  gridgen.H  multifluid.C  multifluid.H  normalisation.H  physdefs.H  physical_constants.H  playground.C  proj.C  queue.C  queue.H  specific.C  specific.H  timestepping.H  units.C  units.H  user_equations.C
cronos/make/: Makefile  path_include
cronos/release_docs/: Cronos-Manual.tex
cronos_block/: CMakeLists.txt  PhysFluxesHD.C  PhysFluxesHD.H  RiemannSolverHD.C  RiemannSolverHD.H  changes.C  changes.H  fields_local.C  fields_local.H  reconst.C  reconst.H  singlestep_block.C  trafo_hd.C  transformations.C  transformations.H
cronos_block/configuration/SedovExplosion/: constants.H  mod_Sedov3D.H  modules.C
cronos_block/configuration/SedovExplosion/randgen/: MersenneTwister.h  randgen.C  randgen.H
cronos_block/configuration/ShockTubeSod/: constants.H  mod_Sod.H  modules.C
cronos_block/configuration/standalone/cronos_block/: standalone_usage.H
cronos_block/data/: data.C  data.H
cronos_block/general/: Hdf5File_cbase.C  Hdf5File_cbase.H  Hdf5File_cbase_typemap.H  buildinfo.H  cfl.C  cronos.H  cronos_config_singlefluid.H  cronos_switches.H  data.C  data.H  eos.H  fluid.H  grid.C  grid.H  gridParam.C  gridParam.H  gridfunc.C  gridfunc.H  gridgen.C  gridgen.H  limiter.H  minmod.H  movie.C  movie.H  normalisation.C  normalisation.H  proj.C  sources.C  sources.H  specific.C  specific.H  timestepping.C  timestepping.H  timewrapper.H  units.C  units.H  vector.H
cronos_block/interface_functions/: problem.C  problem.H  singlestep.C  solver.C  solver.H
cronos_block/kernel/: changes.C  changes.H  compute_step.H  fields_local.H  singlestep_block copy.C  singlestep_block.C  singlestep_block2.C  solver_func.C  solver_func.H  transformations.C  transformations.H  transformations_block.C  transformations_block.H  utils.H
cronos_block/queue/: lazy_assertion.H  queue.H
cronos_block/reconstruction/: direction.H  reconst.C  reconst.H  reconst_block.C  reconst_block.H
cronos_block/riemann_solver/: PhysFluxes.H  PhysFluxesHD.H  RiemannSolver.C  RiemannSolver.H  RiemannSolverHD.H  changes.C  changes.H  hllc_hd.C  vChar_hd.C
cronos_block/stepfunctions/: Hdf5File_cbase.C  Hdf5File_cbase.H  gridfunc.C  gridfunc.H  gridgen.C  gridgen.H  timestepping.C  timestepping.H
cronos_block/test/: singlestep_stub.C  test_data.C  test_data.H
cronos_block/utils/: celerity_test.C  celerity_test.H  queue.H  utils.H
dependencies/include/: H5pubconf-64.h  H5public.h
dependencies/lib/: libaec.so.0.0.10  libgsl.so.25.0.0  libgslcblas.so.0.0.0  libhdf5.settings  libhdf5_cpp.so.103.2.0  libhdf5_fortran.so.102.0.1  libhdf5_hl_cpp.so.100.1.4  libhdf5hl_fortran.so.100.0.5  libsz.so.2.0.1
makeinclude/: AIX-0030ABBB4C00  CYGWIN_NT-5.1-i386  Linux-alpha  Linux-alpha.g++  Linux-amd64  Linux-i386  Linux-ia64  SunOS  SunOS_gnu  first.mak  include.mak
tests/BrioWuHlldRef_medium/: BrioWuHlldRef.cat  run_test.cmake
tests/SedovCartHllRef_medium/: SedovCartHllRef.cat
tests/SedovCartHllcRef_medium/: SedovCartHllcRef.cat
tests/SedovExplosionHllcRef_medium/: SedovCartesian_hllc.cat  SedovCartesian_hllc_efluct
(+424 files in other folders)
